2007-11-28 Yusei
* Remove bookmark box from WebSite_viewDashboardRenderer.

2007-11-23 Yusei
* Add bookmark box in WebSite_viewDashboardRenderer.
* Try to get simulation state if validation state accessor does not exists.

2007-11-21 Yusei
* if document's title is empty, then display its id in document relation box.

2007-09-04 Kazuhiko
* use absolute_url_path instead of getPortalPath for better virtual host support.

2007-01-19 JPS
* Global commit of refactored bt. More refactoring needed still

2006-10-05 Kevin
* Minor fixes.
* Don't show unvisible object in sub_web_object_list (thanks to Kristian).

2006-10-04 Kevin
* New ERP5Web_getNiceURI script to transform any string to a Search Engine friendly URI.

2006-09-25 Kevin
* Fix web page web view editable fields.
* Factorize editable_mode management.
* Remove fields_errors variable to let it be handled in an upper layer of the code.

2006-09-22 Kevin
* Factorize common page template header.
* Re-sync erp5_web template header with xhtml_style one.
* Fix admin toolbox clone widget style consistency.

2006-09-21 Kevin
* Modify CSS selectors to apply the right style to forms and input by default.
* erp5_web depends on erp5_xhtml_style.
* Clean up default css.

2006-09-20 Kevin
* Admin toolbox style clean-up.

2006-09-19 Kevin
* Much more sementical breadcrumb with hierarchical lists.
* Admin Toolbar: add webdav and direct ERP5 access link.
* Admin toolbar is now floating in the default style.
* Add link to web site root on logo.
* Add default link style.
* Add default breadcrumb style.

2006-09-18 Kevin
* Merge all admin toolbar code in one single page template.
* No need of special form for web site first page: the default document to display is known through aggregate category.

2006-09-14 Kevin
* Reorder actions.
* Delete deprecated custom first page layout.
* New version of generic admin tool box (work still in progress).
* Add admin toolbox in the default layout.

2006-09-12 Kevin